fix: remove scrollbar in the modal

--- a/assets/css/edit.css
+++ b/assets/css/edit.css
@@ -236,6 +236,7 @@ nav li {
 	outline: 0;
 	border-radius: 10px;
 	padding: 0;
+	overflow: hidden;
 }
 .modal-container {
 	padding: 26px 20px 48px 20px;
